align columns fix

--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -11,10 +11,13 @@
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   text-align: center;
   box-shadow: 0 0 4px 4px rgba(29, 52, 0, 0.741);
+}
+.home-message>span {
+  padding-top: 5px;
 }
 
 .home-message a {
@@ -28,4 +31,5 @@
 .code {
   display: flex;
   flex-direction: column;
+  align-items: flex-start !important;
 }
